@@ -1,11 +1,11 @@
 // Copyright (C) 2005 Johan Jansson.
 // Licensed under the GNU LGPL Version 2.1.
 //
-// Modified by Anders Logg, 2005-2009.
+// Modified by Anders Logg, 2005-2010.
 // Modified by Garth N. Wells, 2005-2010.
 //
 // First added:  2005-12-02
-// Last changed: 2010-04-05
+// Last changed: 2010-04-15
 
 #ifdef HAS_PETSC
 
@@ -156,7 +156,13 @@ dolfin::uint PETScKrylovSolver::solve(const PETScMatrix& A, PETScVector& x,
   KSPConvergedReason reason;
   KSPGetConvergedReason(*_ksp, &reason);
   if (reason < 0)
-    warning("Krylov solver did not converge (PETSc reason %i).", reason);
+  {
+    bool error_on_nonconvergence = parameters["error_on_nonconvergence"];
+    if (error_on_nonconvergence)
+      error("Krylov solver did not converge (PETSc reason %i).", reason);
+    else
+      warning("Krylov solver did not converge (PETSc reason %i).", reason);
+  }
 
   // Get the number of iterations
   int num_iterations = 0;
